[package]
name = "lain"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false


[dependencies]
bevy = { version = "0.8", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_scene",
    "bevy_gltf",
    "bevy_winit",
    "bevy_render",
    "bevy_text",
    "png",
    "animation",
    "bevy_gilrs",
] }

bevy_easings = "0.8"
bevy_embedded_assets = { version = "0.4", optional = true }
bevy_jornet = "0.1"
bevy_ninepatch = "0.8"
bevy_asset_loader = "0.12"
bevy_mod_raycast = "0.6"

rand = "0.8"
bracket-noise = "0.8"
tracing = "0.1"
crossbeam-channel = "0.5"
interpolation = "0.2"
material-icons = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.8", features = [
  "x11",
] }

[patch.crates-io]
wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }

[features]
default = []
hot = [ "bevy/filesystem_watcher" ]
release = [ "bundled", "tracing/release_max_level_warn" ]
bundled = [ "bevy_embedded_assets" ]
trace = [ "bevy/trace" ]
tracy = [ "bevy/trace", "bevy/trace_tracy" ]

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
